# V2P

./: CMakeLists.txt
app_sdl/: CMakeLists.txt
app_sdl/source/: Application.cpp
app_sdl/source/SDL/: SDLWindow.cpp  SDLWindow.h
core/: CMakeLists.txt
core/V2P/managers/: VideoStreamManager.cpp
core/V2P/stream/: IStreamStrategy.h  M3U8StreamStrategy.cpp  M3U8StreamStrategy.h  Packet.h  VideoFrame.h  VideoStreamFactory.cpp  VideoStreamFactory.h  VideoStreamer.cpp  VideoStreamer.h
core/V2P/utils/: FrameSyncController.h  ThreadSafeFrameQueue.h
core/V2P/writer/: VideoWriter.h
source/: main.cpp
source/libs/engine/: CMakeLists.txt
source/libs/engine/source/: engine.cpp  engine.hpp
source/libs/engine/source/stream/: IStreamStrategy.h  M3U8StreamStrategy.cpp  M3U8StreamStrategy.h  VideoStreamFactory.cpp  VideoStreamer.cpp  VideoStreamer.h
source/libs/engine/source/writer/: VideoWriter.cpp  VideoWriter.h
